--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Plaster&display=swap" rel="stylesheet" />
 
   <!-- 編譯後的 CSS -->
-  <link rel="stylesheet" href="./assets/scss/main.css" />
+  <link rel="stylesheet" href="./assets/css/main.css" />
+
   <!-- Bootstrap Icons -->
     <link
     rel="stylesheet"
@@ -18,14 +19,15 @@
 </head>
 <body>
   <div id="header-include"></div>
+  <!-- 引入header -->
 
-  <main class="container py-5">
+  <main class="container-isla py-5 bg-light">
     <h1 class="text-info">這是首頁</h1>
     <p>歡迎來到彩妝電商ISLA！</p>
   </main>
 
 
-  <!-- 以下不要動 -->
+  <!-- 引入 footer -->
   <div id="footer-include"></div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./js/include.js"></script>
