--- a/pages/cart/cart-list.html
+++ b/pages/cart/cart-list.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Plaster&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../../assets/scss/main.css" />
+    <link rel="stylesheet" href="../../assets/css/main.css" />
 
     <!-- Bootstrap Icons -->
     <link
